BAC-51 feat(product): 테스트파일 작성